--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,16 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     testImplementation 'junit:junit:4.12'
-    compile 'org.honorato.multistatetogglebutton:multistatetogglebutton:0.2.2'
 
 
 
-
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.leo.simplearcloader:simplearcloader:1.0.+'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 
 }
