--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.3.71'
+    ext.versions = [:]
+    versions.kotlin = '1.3.70'
+    versions.work = "2.3.4"
     repositories {
         google()
         jcenter()
